Fix rounding of inputs on safari ios

--- a/public/styles.css
+++ b/public/styles.css
@@ -651,6 +651,7 @@ button[disabled] + div {
   background-color: transparent;
   border: none;
   border-bottom: 1px solid var(--color-pink);
+  border-radius: 0;
   font-size: inherit;
   padding-left: 16px;
   text-align: center;
